--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Sughand Batra is Student of SIBA</h1>
     <h1>Sughand Batra is very brilliant girl</h1>
+    <h2>Sughand is my jaaaaaaan </h2>
 </body>
 </html>
