modify the index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Sughand Batra is very brilliant girl</h1>
     <h2>Sughand is my jaaaaaaan </h2>
     <h1>Vandu is roomate of Sughand Batra DO Shankar lal </h1>
+    <h1>Sughand is good son of Shankar Lal </h1>
 </body>
 </html>
